MVP of fix for jumpy scrollbar issue

--- a/polaris-react/src/components/AppProvider/AppProvider.scss
+++ b/polaris-react/src/components/AppProvider/AppProvider.scss
@@ -37,6 +37,8 @@ html {
 
   text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
+
+  @include custom-scrollbars();
 }
 
 body {
